# The_Glass_Engine

./: CMakeLists.txt  DESIGN.md  README.md  TODO.md
core/: FFTWrapper.cpp  FFTWrapper.h  ImageModData.h  ImageModulationData.h  ImageModulationTripleBuffer.cpp  ImageModulationTripleBuffer.h  Messages.h  ModMatrix.h  ModRoute.cpp  ModRoute.h  ModSource.h  Parameters.cpp  StdFix.h  TrippleBuffer.h  Window.h
dsp/: FFTWrapper.h  GrainPool.h  SpectralEngine.h  Window.h
dsp/granular/: Grain.h  GrainPool.h  WindowTable.h
engine/: FFTWrapper.cpp  SpectralEngine.h  Window.h
perf/: AllocSentinel.cpp  AllocSentinel.h  BlockProfiler.h  CMakeLists.txt  PerfHarness.cpp
plugin/: ImageScanner.cpp  ModRouteRowComponent.cpp  ModRouteRowComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: # scriptsinit_repo_structure.ps1  check_realtime_budgets.py  sync_todos.py
source/: JuceHeader.h
source/core/: LockFreeFIFO.h  ModMatrix.cpp  ModSource.cpp  ModSource.h  ModulationBuffer.h  ParamMirror.cpp  ParamMirror.h  Parameters.h  RealtimeConfig.h  Smoothing.h  StateManager.cpp  StateManager.h
source/dsp/: GrainPool.h  SpectralEngine.cpp
source/dsp/granular/: Grain.h  GranularEngine.cpp  GranularEngine.h
source/engine/: FFTWrapper.h  GranularEngine.cpp  GranularEngine.h  SampleManager.cpp  SampleManager.h  SpectralEngine.cpp  SpectralProcessor.cpp  SpectralProcessor.h
source/gpu/: GPUImageReader.h
source/plugin/: ImageScanner.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/ui/: ImageCanvas.h
tests/: CMakeLists.txt  placeholder.cpp
threading/: TripleBuffer.h
ui/: GrainVisualizerComponent.cpp  GrainVisualizerComponent.h  ImageCanvas.cpp  ModMatrixComponent.cpp  ModMatrixComponent.h  PaintCanvas.cpp  PaintCanvas.h
